# crabber

./: .dockerignore  .gitignore  Browse database.lnk  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRABBER_DATABASE.db  CRABBER_DATABASE.db.bak  Dockerfile  Makefile  PREMERGE_TODO.txt  Procfile  README.md  api_utils.py  award_show.py  blacklist-post-code.cfg  boussole.json  config.py  crab_mail.py  crabber.py  crabber_api.py  crabber_cities.py  crabber_rss.py  extensions.py  fetch_cards.py  initialize_database.py  interactive_db.py  limits.json  master_plan.txt  models.py  patterns.py  pretty_date.py  pyproject.toml  recommended_users.cfg  reg.py  requirements.txt  retro_optimize_images.py  setup.cfg  test.py  todo.txt  trophies.json  (+4 more)
.github/: FUNDING.yml
.github/workflows/: test.yml
scripts/: add_new_trophies.py  create_new_tables.py  generate_crabatars.py  identify_orphaned_images.py  initialize_database.py  migrate_db.sh  migrate_images.py  moderate.py  remove_blank_cards.py  retro_optimize_images.py  test.py  unread_notifications.py  update_trophies.py
scss/: color_overrides.scss  light_mode.scss  style.scss
static/: manifest.json  robots.txt
static/crabcoin/: stellar.toml
static/css/: cities-style.css  clear_cache.css  color_overrides.css  dyslexic_mode.css  halloween_light_mode.css  halloween_mode.css  light_mode.css  style.css
static/img/user_uploads/: .ignore
static/legal/: cookies.txt  tos.txt
static/licenses/: comic-sans.rtf
static/scripts/: _node_crabmidi.js  ajax.js  bundle.js  holiday_modes.js  icons.js  lastfm.js  main.js  toast.js
static/scss/: color_overrides.scss  comicsans_mode.scss  dyslexic_mode.scss  light_mode.scss  style.scss
templates/: 403.html  404.html  account-deleted.html  base.html  bookmarks-ajax-body.html  bookmarks-ajax-heading.html  bookmarks-content.html  bookmarks.html  cities-base.html  cities-edit.html  cities-index.html  crab-midi.html  crabtag-ajax-body.html  crabtag-ajax-heading.html  crabtag-ajax-title.html  crabtag-content.html  crabtag.html  delete-account.html  developer.html  external_img.html  fast-molt-buttons.html  fast-molt-dropdown.html  fast-molt.html  followx.html  forgot-password.html  generic-ajax-loader.html  giphy.html  join_crabber.html  large_molt.html  link-card.html  login.html  login_2fa.html  macros.jinja  mini_bio.html  mini_compose.html  moderation-buttons-crab.html  moderation-buttons-molt.html  moderation-crab.html  moderation-logs.html  moderation-molt.html  (+64 more)
tests/: test_patterns.py
